Add ingress controller

--- a/values.yaml
+++ b/values.yaml
@@ -5,19 +5,33 @@
 replicaCount: 1
 
 image:
-  repository: gcr.io/helios-devel/kubot
+  repository: gcr.io/helios-public/kubot
   tag: v0.1.0
   pullPolicy: IfNotPresent
 
 service:
   name: http
   type: NodePort
-  externalPort: 80
+  externalPort: 8080
   internalPort: 4567
 
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+ingress:
+  tls: true
+  hosts:
+    - bot.rubykube.io
+
+ingress:
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
+  path: /
+  hosts:
+    - bot.rubykube.io
+  tls:
+    - secretName: bot-rubykube-io
+      hosts:
+        - bot.rubykube.io
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
