--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kubot-svc
+  name: {{ template "kubot.fullname" . }}
   labels:
     app: {{ template "kubot.name" . }}
     chart: {{ template "kubot.chart" . }}
@@ -13,7 +13,7 @@ spec:
     - port: {{ .Values.service.internalPort }}
       targetPort: {{ .Values.service.externalPort }}
       protocol: TCP
-      name: http
+      name: {{ .Values.service.name }}
   selector:
     app: {{ template "kubot.name" . }}
     release: {{ .Release.Name }}
