--- a/templates/ingress.yml
+++ b/templates/ingress.yml
@@ -1,6 +1,7 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "kubot.fullname" . -}}
 {{- $ingressPath := .Values.ingress.path -}}
+{{- $externalPort := .Values.service.externalPort -}}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -33,6 +34,6 @@ spec:
           - path: {{ $ingressPath }}
             backend:
               serviceName: {{ $fullName }}
-              servicePort: {{ .Values.service.externalPort }}
+              servicePort: {{ $externalPort }}
   {{- end }}
 {{- end }}
